--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/FileSaver.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script src="https://jzb.beijing.gov.cn/oss/focus-desktop/gwork/jssdk/JZB-JSSDK-1.0.3.js"></script>
     <script>
+      try {
+        var vConsole = new VConsole();
+      } catch (e) {}
       function downloadText() {
         var blob = new Blob(["Hello, world!"], { type: "text/plain;charset=utf-8" });
         saveAs(blob, "hello world.txt");
@@ -23,10 +27,10 @@
       function downloadImage() {
         const options = {
           downloadUrl: `./image.webp`,
-          name: 'image.webp',
+          name: "image.webp",
           callback: function ({ statusCode }) {
             if (statusCode === 0) {
-             alert("附件下载成功！");
+              alert("附件下载成功！");
             } else {
               alert("附件下载失败！");
             }
@@ -37,10 +41,10 @@
       function downloadPdf() {
         const options = {
           downloadUrl: `./测试iOS附件.pdf`,
-          name: '测试iOS附件.pdf',
+          name: "测试iOS附件.pdf",
           callback: function ({ statusCode }) {
             if (statusCode === 0) {
-             alert("附件下载成功！");
+              alert("附件下载成功！");
             } else {
               alert("附件下载失败！");
             }
@@ -52,10 +56,10 @@
       function downloadZip() {
         const options = {
           downloadUrl: `./html.zip`,
-          name: 'html.zip',
+          name: "html.zip",
           callback: function ({ statusCode }) {
             if (statusCode === 0) {
-             alert("附件下载成功！");
+              alert("附件下载成功！");
             } else {
               alert("附件下载失败！");
             }
