--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/FileSaver.min.js"></script> -->
     <script src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
-    <script src="https://jzb.beijing.gov.cn/oss/focus-desktop/gwork/jssdk/JZB-JSSDK-1.0.3.js"></script>
+    <script src="./JZB-JSSDK-1.0.3.js"></script>
     <script>
       try {
         var vConsole = new VConsole();
