--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         const options = {
           downloadUrl: `./image.webp`,
           name: "image.webp",
-          callback: function ({ statusCode }) {
-            if (statusCode === 0) {
+          type:'webp',
+          callback: function (res) {
+            console.log(res);
+            if (res.statusCode === 0) {
               alert("附件下载成功！");
             } else {
               alert("附件下载失败！");
@@ -42,8 +44,10 @@
         const options = {
           downloadUrl: `./测试iOS附件.pdf`,
           name: "测试iOS附件.pdf",
-          callback: function ({ statusCode }) {
-            if (statusCode === 0) {
+          type:'pdf',
+          callback: function (res) {
+            console.log(res);
+            if (res.statusCode === 0) {
               alert("附件下载成功！");
             } else {
               alert("附件下载失败！");
@@ -57,8 +61,10 @@
         const options = {
           downloadUrl: `./html.zip`,
           name: "html.zip",
-          callback: function ({ statusCode }) {
-            if (statusCode === 0) {
+          type:'zip',
+          callback: function (res) {
+            console.log(res);
+            if (res.statusCode === 0) {
               alert("附件下载成功！");
             } else {
               alert("附件下载失败！");
