feat: 下载地址绝对地址

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
       function downloadImage() {
         const options = {
-          downloadUrl: `./image.webp`,
+          downloadUrl: 'https://qiyexue.github.io/image.webp',
           name: "image.webp",
           type:'webp',
           callback: function (res) {
@@ -42,7 +42,7 @@
       }
       function downloadPdf() {
         const options = {
-          downloadUrl: `./测试iOS附件.pdf`,
+          downloadUrl: 'https://qiyexue.github.io/测试iOS附件.pdf',
           name: "测试iOS附件.pdf",
           type:'pdf',
           callback: function (res) {
@@ -59,7 +59,7 @@
 
       function downloadZip() {
         const options = {
-          downloadUrl: `./html.zip`,
+          downloadUrl: 'https://qiyexue.github.io/html.zip',
           name: "html.zip",
           type:'zip',
           callback: function (res) {
