--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       }
       function downloadPdf() {
         const options = {
-          downloadUrl: 'https://qiyexue.github.io/测试iOS附件.pdf',
-          name: "测试iOS附件.pdf",
+          downloadUrl: 'https://qiyexue.github.io/测试0828-565463562453465463562453464567453534654635624534645674535346546356245346456745353464567453534264574735346554764674563465764563456(发起人顾荣荣).pdf',
+          name: "测试0828-565463562453465463562453464567453534654635624534645674535346546356245346456745353464567453534264574735346554764674563465764563456(发起人顾荣荣).pdf",
           type:'pdf',
           callback: function (res) {
             console.log(res);
